# nba_scraper

./: .env  .gitignore  AGENTS.md  config.py  data_collector.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  scraper.py  start_db.bat  started  test.py  utils.py
migrations/: env.py
migrations/versions/: eaa02680aa77_create_teams_table.py
nba_scraper/: app.py  dash_app.py  data_collector.py  header_creator.py  index.py  main_test.py  migrate_to_database.py  utils.py
nba_scraper/analysis/: analyzer.py  logistic_regression.py
nba_scraper/api/: main.py
nba_scraper/configuration/: box_score.py  database_config.py  global_config.py  logging_config.py  player_stats.py  schedule_and_results.py
nba_scraper/dao/: common_dao.py
nba_scraper/db/: __init__.py  base.py  models.py  session.py
nba_scraper/dto_models/: games_dto.py  player_stats_dto.py  teams_dto.py
nba_scraper/mappers/: box_score_mapper.py  games_dto_mapper.py  teams_dto_mapper.py
nba_scraper/migration/: __init__.py  migrate_to_database.py  migrate_to_games_metadata_database.py  nuke_database.py  test_database.py
nba_scraper/models/: box_score_row.py  common_model.py  game_box_score.py
nba_scraper/nba_api/: box_score_fetcher_service.py  box_score_traditional_client_service.py  populate_database.py  teams_client_service.py  test.py
nba_scraper/pages/: box_scores.py  page.py  players.py  stats.py  teams.py
nba_scraper/repository/: team_repository.py
scripts/: deploy
tests/: test_csv_box_score_dao.py  test_data_collector.py  test_teams_client_service.py  test_utils.py
(+37 files in other folders)
