[project]
name = "nba-scraper"
version = "0.1.0"
description = "NBA prediction and Reddit sentiment analysis platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "nba-api>=1.11.4",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
